--- a/src/components/UI/Logo/Logo.scss
+++ b/src/components/UI/Logo/Logo.scss
@@ -1,62 +1,59 @@
-.Logo{
-    width:100%;
-    height:300px;
-    background-color:bisque;
-    margin:auto;
+.Logo {
+	width: 100%;
+	height: 300px;
+	background-color: rgb(239, 236, 223);
+	margin: auto;
 
-    .logoImg{
-        display: block;
-        margin:0 auto;
-        width:200px;       
-        position: relative;
-        top:100px;  
-    }
+	.logoImg {
+		display: block;
+		margin: 0 auto;
+		width: 200px;
+		position: relative;
+		top: 100px;
+	}
 
-    .languageArea{
-        
-        position: relative;
-        width:100px;
-        height:30px;
-        left:80%;
-        top:-10%;
-        .languageIcon{
-            width:25px;
-            height:25px;
-            margin:2.5px 0;
-        }
+	.languageArea {
+		position: relative;
+		width: 100px;
+		height: 30px;
+		left: 80%;
+		top: -10%;
+		.languageIcon {
+			width: 25px;
+			height: 25px;
+			margin: 2.5px 0;
+		}
 
-       span{
-           display:inline-block;
-           left:25px;
-           width:75px;
-           height: 25px;
-           margin:2.5px 0;
-        a {
-           h4{
-            font-size: 12pt;
-            float: right;
-            margin:0;
-            padding:0 10px;
-            
-             }
-          }
-       }
+		span {
+			display: inline-block;
+			left: 25px;
+			width: 75px;
+			height: 25px;
+			margin: 2.5px 0;
+			a {
+				h4 {
+					font-size: 12pt;
+					float: right;
+					margin: 0;
+					padding: 0 10px;
+				}
+			}
+		}
 
+		//In progress
+		// a::link{
+		//     color:red;
+		//     cursor: pointer;
+		// }
 
-       //In progress
-        // a::link{
-        //     color:red;
-        //     cursor: pointer;
-        // }
+		// a:visited{
+		//     color:red;
+		//     cursor: pointer;
+		// }
 
-        // a:visited{
-        //     color:red;
-        //     cursor: pointer;
-        // }
-
-        a:hover{
-            color:red;
-            cursor: pointer;
-        }
-    }
+		a:hover {
+			color: red;
+			cursor: pointer;
+		}
+	}
 }
